syntax = "proto3";
option go_package = "../proto";
//package proto;
import "google/protobuf/timestamp.proto";

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply);
}

enum Gender {
	MALE = 0;
	FEMALE = 1;
}


message HelloRequest {
	
	message Info {
		string info = 1;
	}
	string name = 1;
	Gender gender = 2;
	google.protobuf.Timestamp genTime = 3;
	Info  infomation = 4;
	map<string, string> dune = 5;
	repeated int32 cast = 6;
}



message HelloReply {
	string message =1;
}